# FastAPI-blog

./: .gitignore  LICENSE  auth.py  blog.db  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
routers/: posts.py  users.py
templates/: home.html  layout.html
